fix z-index issue and implement marker bounce when clicking on workout

--- a/src/Explore/AddActivity/styles.css
+++ b/src/Explore/AddActivity/styles.css
@@ -11,6 +11,10 @@
   box-shadow: none!important;
 }
 
+.add-activity button {
+  z-index: 0!important;
+}
+
 .top_level_container {
   width: 100%;
   box-sizing: border-box;
